--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   salomon_bottom_bar: ^3.3.2
   animated_bottom_navigation_bar: ^1.3.3
-
+  firebase_core: ^3.4.1
+  firebase_auth: ^5.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
